applications/immich/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app: immich
  ports:
    - name: web
      port: 8080
